# pytest-sarif-demo

./: .gitignore  CLAUDE.md  LICENSE  POLICIES.md  README.md  pyproject.toml  pytest-sarif-demo-requirements.md  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml  security-tests.yml
examples/: quick_start.py
policies/: enterprise-strict.json  financial-pci-dss.json  healthcare-hipaa.json  startup-balanced.json
pytest_sarif/: __init__.py  __main__.py  baseline_manager.py  compliance_generator.py  compliance_mapper.py  console_summary.py  constants.py  html_generator.py  json_summary_generator.py  markdown_generator.py  models.py  owasp_metadata.py  plugin.py  policy_config.py  report_manager.py  risk_scorer.py  sarif_generator.py  statistics.py  trend_tracker.py
pytest_sarif/static/: report.css
tests/: conftest.py  test_core_modules.py  test_data_leakage.py  test_denial_of_service.py  test_excessive_agency.py  test_insecure_output_handling.py  test_insecure_plugin_use.py  test_model_theft.py  test_overreliance.py  test_prompt_injection.py  test_supply_chain.py  test_system_prompt_leakage.py
