[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-sarif-demo"
version = "0.1.0"
description = "Pytest plugin for generating SARIF security reports"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "LLMSecTest Project", email = "noreply@example.com"}
]
keywords = ["pytest", "sarif", "security", "testing", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]

dependencies = [
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "jsonschema>=4.19.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/wehnsdaefflac/pytest-sarif-demo"
Repository = "https://github.com/wehnsdaefflac/pytest-sarif-demo"
Issues = "https://github.com/wehnsdaefflac/pytest-sarif-demo/issues"

[project.entry-points.pytest11]
sarif = "pytest_sarif.plugin"

[tool.setuptools.packages.find]
include = ["pytest_sarif*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
